Add function for geo search and test data
